Fix sidebar spacing

--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -7,7 +7,7 @@
   box-sizing: border-box;
   border-right: 1px solid $pe-color-concrete;
   background-color: $pe-color-white;
-  z-index: 10;
+  z-index: 30;
 
   transform: translateX(-240px);
   transition: transform 0.3s;
@@ -35,6 +35,7 @@
     color: $pe-color-digital-pearson-blue;
     padding: 16px 36px;
     border-bottom: 1px solid $pe-color-concrete;
+    margin: 0;
   }
 
   .sidebar-toc {
